Adicionando um footer.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>Criado por <b>Adriano Ivan</b></footer>
     <script src="script.js"></script>
   </body>
 </html>
